chore: improve SEO keywords for better discoverability

--- a/package.json
+++ b/package.json
@@ -23,17 +23,26 @@
   "keywords": [
     "typescript",
     "types",
+    "type-generation",
     "orm",
     "prisma",
     "mongoose",
     "typeorm",
     "sequelize",
     "codegen",
-    "type-generation",
     "backend",
     "frontend",
     "sync",
-    "cli"
+    "cli",
+    "auto-generate",
+    "schema",
+    "interface",
+    "prisma-types",
+    "mongoose-types",
+    "typescript-generator",
+    "type-sync",
+    "fullstack",
+    "typeweaver"
   ],
   "author": "Type-Bridge Contributors",
   "license": "MIT",
